--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,22 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:prettier/recommended"],
+    "plugins": ["prettier", "simple-import-sort"],
+    "rules": {
+        "prettier/prettier": [
+            "error",
+            {
+                "tabWidth": 4,
+                "semi": true,
+                "singleQuote": true,
+                "trailingComma": "all",
+                "endOfLine": "auto",
+                "bracketSpacing": true,
+                "printWidth": 160
+            }
+        ],
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "no-unused-vars": "warn",
+        "no-console": "warn"
+    }
 }
