--- a/package.json
+++ b/package.json
@@ -19,15 +19,11 @@
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
-        "flatpickr": "^4.6.13",
-        "i18next": "^23.15.1",
         "jsonwebtoken": "^9.0.2",
         "next": "14.2.10",
         "next-auth": "^4.24.8",
-        "pdf-lib": "^1.17.1",
         "react": "^18",
         "react-dom": "^18",
-        "react-file-base64": "^1.0.3",
         "react-toastify": "^10.0.5",
         "translate": "^3.0.1",
         "zod": "^3.23.8"
@@ -36,6 +32,7 @@
         "eslint": "^8.57.1",
         "eslint-config-next": "14.2.10",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "prettier": "^3.3.3",
