--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "cloudinary": "^2.5.1",
         "jsonwebtoken": "^9.0.2",
         "next": "14.2.10",
         "next-auth": "^4.24.8",
+        "next-cloudinary": "^6.14.1",
         "react": "^18",
         "react-dom": "^18",
         "react-toastify": "^10.0.5",
