--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.5.3",
+        "@nextui-org/tooltip": "^2.0.41",
+        "@popperjs/core": "^2.11.8",
         "@prisma/client": "^5.20.0",
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.3",
